nginx/default-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    name: default-http-backend
  ports:
  - port: 80
    targetPort: 18080
