nginx/web-ui-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-ui
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 18080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-web-ui
spec:
  rules:
  - host: nginx.minikube
    http:
      paths:
      - backend:
          serviceName: default-http-backend
          servicePort: 18080
